--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   <meta name="twitter:description" content="Explore atrações, roteiros e mapas interativos desta cidade.">
   <meta name="twitter:image" content="https://www.exemplo.com/assets/img/og-cover.jpg">
   <!-- Icons -->
-  <link rel="icon" href="/assets/icons/favicon.ico">
-  <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon.png">
+  <link rel="icon" href="assets/icons/favicon.ico">
+  <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png">
   <meta name="theme-color" content="#0b3d91">
   <!-- Styles -->
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <!-- JSON-LD: Site & Organization -->
   <script type="application/ld+json">
   {
@@ -60,8 +60,8 @@
         <a class="btn btn-primary" href="#atracoes">Ver atrações</a>
       </div>
       <picture>
-        <source media="(min-width: 768px)" srcset="/assets/img/hero-large.jpg">
-        <img src="/assets/img/hero-small.jpg" alt="Vista panorâmica da cidade ao pôr do sol" loading="eager" decoding="async">
+        <source media="(min-width: 768px)" srcset="assets/img/hero-large.jpg">
+        <img src="assets/img/hero-small.jpg" alt="Vista panorâmica da cidade ao pôr do sol" loading="eager" decoding="async">
       </picture>
     </section>
 
@@ -140,8 +140,8 @@
       <nav aria-label="Rodapé">
         <ul class="inline">
           <li><a href="#faq">FAQ</a></li>
-          <li><a href="/politica-privacidade.html">Privacidade</a></li>
-          <li><a href="/termos.html">Termos</a></li>
+          <li><a href="politica-privacidade.html">Privacidade</a></li>
+          <li><a href="termos.html">Termos</a></li>
         </ul>
       </nav>
     </div>
